Adding space to the top of the h2 tag in work.

--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -13,10 +13,10 @@ layout: wide
 
 </article>
 
-<aside class="meta centre clear delta">
+<aside class="meta centre clear delta padding-above">
   <h2 class="meta-header">Year</h2>
   {{ page.date | date: '%Y' }}
-  
+
   <h2 class="meta-header">Services</h2>
   <ul class="services">
     {% for services in page.services %}
