Fixed up bug in header description meta tag.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   {% if page.excerpt %}
-    <meta name="description" content="{{ page.excerpt }}" />
+    <meta name="description" content="{{ page.excerpt | strip_html | truncatewords: 50 }}" />
   {% else %}
     <meta name="description" content="{{ site.tagline }}" />
   {% endif %}
