--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,9 +18,11 @@
   <nav id="the-nav">
     <ul class="nav">
       <li><a title="Home" href="{{ site.baseurl }}">Home</a></li>
-      <li><a title="Journal" href="/journal">Journal</a></li>
       <li><a title="Work" href="/work">Work</a></li>
       <li><a title="About" href="/about">About</a></li>
+      <li><a title="Writing" href="/writing">Writing</a></li>
+      <li><a title="Reading" href="/reading">Reading</a></li>
+      <li><a title="Journal" href="/journal">Journal</a></li>
     </ul>
   </nav>
 
