--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,9 +34,7 @@
   </style>
   </style>
 
-  <link rel="stylesheet" href="{{ site.baseurl }}css/styles.css">
-
-  <!-- Fonts -->
+  <!-- Styles and Fonts -->
   <script>
     // include loadCSS here...
     function loadCSS( href, before, media ){
@@ -66,10 +64,12 @@
     return ss;
 }
     // load a file
-    loadCSS( "//cloud.typography.com/6272432/767186/css/fonts.css" );
+    loadCSS( "//cloud.typography.com/6272432/767186/css/fonts.css");
+    loadCSS("/css/styles.css");
   </script>
 
   <noscript><link href="//cloud.typography.com/6272432/767186/css/fonts.css" rel="stylesheet"></noscript>
+  <noscript><link href="/css/styles.css" rel="stylesheet"></noscript>
 
   <!-- Icons -->
   <link rel="shortcut icon" href="{{ site.baseurl }}images/favicon.ico">
