--- a/_scss/pagination.scss
+++ b/_scss/pagination.scss
@@ -6,8 +6,8 @@
 .pagination {
   overflow: hidden; // clearfix
   margin: 0 -1.5rem 1rem;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
-  color: #ccc;
+  font-family: $inuit-heading-font;
+  color: $inuit-base-grey-color-2;
   text-align: center;
 }
 
@@ -15,7 +15,7 @@
 .pagination-item {
   display: block;
   padding: 1rem;
-  border: solid #eee;
+  border: solid $inuit-base-grey-color-2;
   border-width: 1px 0;
 
   &:first-child {
@@ -25,7 +25,7 @@
 
 // Only provide a hover state for linked pagination items
 a.pagination-item:hover {
-  background-color: #f5f5f5;
+  background-color: $hoverColor;
 }
 
 @media (min-width: 30em) {
