--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,33 +36,7 @@
 
   <!-- Styles and Fonts -->
   <script>
-    // include loadCSS here...
-    function loadCSS( href, before, media ){
-    "use strict";
-    var ss = window.document.createElement( "link" );
-    var ref = before || window.document.getElementsByTagName( "script" )[ 0 ];
-    var sheets = window.document.styleSheets;
-    ss.rel = "stylesheet";
-    ss.href = href;
-    ss.media = "only x";
-    ref.parentNode.insertBefore( ss, ref );
-    function toggleMedia(){
-        var defined;
-        for( var i = 0; i < sheets.length; i++ ){
-            if( sheets[ i ].href && sheets[ i ].href.indexOf( href ) > -1 ){
-                defined = true;
-            }
-        }
-        if( defined ){
-            ss.media = media || "all";
-        }
-        else {
-            setTimeout( toggleMedia );
-        }
-    }
-    toggleMedia();
-    return ss;
-}
+    function loadCSS(e,t,n){"use strict";function r(){for(var t,i=0;i<d.length;i++)d[i].href&&d[i].href.indexOf(e)>-1&&(t=!0);t?o.media=n||"all":setTimeout(r)}var o=window.document.createElement("link"),i=t||window.document.getElementsByTagName("script")[0],d=window.document.styleSheets;return o.rel="stylesheet",o.href=e,o.media="only x",i.parentNode.insertBefore(o,i),r(),o}
     // load a file
     loadCSS( "//cloud.typography.com/6272432/767186/css/fonts.css");
     loadCSS("/css/styles.css");
