CSS cleanup - REMs and other stuff.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,13 +4,13 @@
 	  <div class="about">Robert Carroll is a {{ site.job_description }}. He runs {{ site.description }}.</div>
 	  <div class="contact"><em>For new project enquiries, please email <a rel="me" href="mailto:rob@wearethoughtfox.com">rob@wearethoughtfox.com</a>.</em></div>
 	  <div class="copyright">© {{ site.time | date: '%Y' }} <a href="mailto:rob@wearethoughtfox.com">Robert Carroll</a>. All rights reserved.</div>
-	</div>  
+	</div>
 
-	<div class="elsewhere">	
-		<h2 class="zeta no-margin-top">Elsewhere</h2>
+	<div class="elsewhere">
+		<h2 class="epsilon no-margin-top padding-below-quarter">Elsewhere</h2>
 		  <ul>
 		  	<li><a rel="me" href="https://twitter.com/robertocarroll">Twitter</a></li>
-		  	<li><a rel="me" href="https://github.com/robertocarroll">GitHub</a></li>	    
+		  	<li><a rel="me" href="https://github.com/robertocarroll">GitHub</a></li>
 		    <li><a href="https://github.com/robertocarroll/ideas/issues">Ideas</a></li>
 		    <li><a rel="me" href="https://flickr.com/people/robertocarroll">Flickr</a></li>
 		    <li><a rel="me" href="https://plus.google.com/+RobertCarrollz">Google</a></li>
@@ -18,4 +18,4 @@
 		  </ul>
 	</div>
  </footer>
-    
+
