--- a/_scss/footer.scss
+++ b/_scss/footer.scss
@@ -6,21 +6,21 @@ footer {
 }
 
 .summary {
-	background-color: $inuit-base-grey-color-3; 
+	background-color: $inuit-base-grey-color-3;
 	padding: $inuit-base-spacing-unit;
 	height: 15rem;
 	display: flex;
-	
-	@include breakpoint(small) { 
-		@include gs-span(m, all); 
+
+	@include breakpoint(small) {
+		@include gs-span(m, all);
 		padding-bottom: 6*$inuit-base-spacing-unit;
 	}
 
-	@include breakpoint(medium) { 
+	@include breakpoint(medium) {
 		width: 50%;
 	}
 
-	@include breakpoint(large) { 
+	@include breakpoint(large) {
 		width: 50%;
 	}
 }
@@ -30,22 +30,22 @@ footer {
 }
 
 .elsewhere {
-	background-color: $lightPrimaryColor; 
+	background-color: $lightPrimaryColor;
 	padding: $inuit-base-spacing-unit;
 	height: 15rem;
 	display: flex;
 
-	@include breakpoint(small) { 
-		@include gs-span(m, all); 
+	@include breakpoint(small) {
+		@include gs-span(m, all);
 		clear:both;
 	}
 
-	@include breakpoint(medium) { 
+	@include breakpoint(medium) {
 		width: 50%;
 		clear:none;
 	}
 
-	@include breakpoint(large) { 
+	@include breakpoint(large) {
 		width: 50%;
 		clear:none;
 	}
@@ -54,6 +54,6 @@ footer {
 .elsewhere ul {
 	list-style: outside none none;
 	padding: 0;
-	padding-left: $inuit-base-spacing-unit;
-	margin-bottom: $inuit-base-spacing-unit--small;
+  @include rem(padding-left, $inuit-base-spacing-unit);
+  @include rem(margin-bottom, $inuit-base-spacing-unit--small);
 }
