--- a/_scss/typography.scss
+++ b/_scss/typography.scss
@@ -50,9 +50,20 @@ h6,
 
 // Body text
 p {
-  @include inuit-font-size($inuit-heading-size-4, none);
   margin-top: 0;
   @include rem(margin-bottom, $inuit-base-spacing-unit);
+
+  @include breakpoint(small) {
+    @include inuit-font-size($inuit-base-font-size,($inuit-base-line-height/$inuit-heading-size-3));
+  }
+
+  @include breakpoint(medium) {
+    @include inuit-font-size($inuit-base-font-size);
+  }
+
+  @include breakpoint(large) {
+    @include inuit-font-size($inuit-base-font-size);
+  }
 }
 
 strong {
@@ -62,8 +73,12 @@ strong {
 // Lists
 ul, ol, dl {
   margin-top: 0;
-  margin-bottom: $inuit-base-spacing-unit;
+  @include rem(margin-bottom, $inuit-base-spacing-unit);
   padding-left: 0;
+}
+
+li {
+  @include rem(margin-bottom, $inuit-base-spacing-unit--small);
 }
 
 ul li:before {
