--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,6 @@
     {{ content }}
   </div>
   {% include footer.html %}
-
+  <script async src="{{ site.baseurl }}javascripts/gridset-overlay.js"> </script>
   </body>
 </html>
