Starting to BEM my CSS.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 
 	<div class="elsewhere">
 		<h2 class="epsilon no-margin-top padding-below-quarter">Elsewhere</h2>
-		  <ul>
+		  <ul class="elsewhere__list">
 		  	<li><a rel="me" href="https://twitter.com/robertocarroll">Twitter</a></li>
 		  	<li><a rel="me" href="https://github.com/robertocarroll">GitHub</a></li>
 		    <li><a href="https://github.com/robertocarroll/ideas/issues">Ideas</a></li>
