--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -3,3 +3,5 @@
 @import "../_scss/base.scss";
 @import "../_scss/gridset.scss";
 @import "../_scss/typography.scss";
+@import "../_scss/misc.scss";
+@import "../_scss/masthead.scss";
