--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -17,10 +17,10 @@ layout: wide
   <h2 class="meta-header">Year</h2>
   {{ page.date | date: '%Y' }}
 
-  <h2 class="meta-header">Services</h2>
+  <h2 class="meta-header">My role</h2>
   <ul class="services">
     {% for services in page.services %}
-      <li>{{ services }}</li>
+      <li class="services__list">{{ services }}</li>
     {% endfor %}
   </ul>
 </aside>
