Lots of moving around and cleaning up. Added Oct 2015 recently.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 		    <li><a href="https://github.com/robertocarroll/ideas/issues">Ideas</a></li>
 		    <li><a rel="me" href="https://flickr.com/people/robertocarroll">Flickr</a></li>
 		    <li><a rel="me" href="https://plus.google.com/+RobertCarrollz">Google</a></li>
-		    <li><a href="{{ site.baseurl }}/atom.xml">RSS</a></li>
+		    <li><a href="{{ site.baseurl }}atom.xml">RSS</a></li>
 		  </ul>
 	</div>
  </footer>
