--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,12 +9,12 @@
 	<div class="elsewhere">
 		<h2 class="epsilon no-margin-top padding-below-quarter">Elsewhere</h2>
 		  <ul class="elsewhere__list">
-		  	<li><a rel="me" href="https://twitter.com/robertocarroll">Twitter</a></li>
-		  	<li><a rel="me" href="https://github.com/robertocarroll">GitHub</a></li>
-		    <li><a href="https://github.com/robertocarroll/ideas/issues">Ideas</a></li>
-		    <li><a rel="me" href="https://flickr.com/people/robertocarroll">Flickr</a></li>
-		    <li><a rel="me" href="https://plus.google.com/+RobertCarrollz">Google</a></li>
-		    <li><a href="{{ site.baseurl }}atom.xml">RSS</a></li>
+		  	<li class="zeta"><a rel="me" href="https://twitter.com/robertocarroll">Twitter</a></li>
+		  	<li class="zeta"><a rel="me" href="https://github.com/robertocarroll">GitHub</a></li>
+		    <li class="zeta"><a href="https://github.com/robertocarroll/ideas/issues">Ideas</a></li>
+		    <li class="zeta"><a rel="me" href="https://flickr.com/people/robertocarroll">Flickr</a></li>
+		    <li class="zeta"><a rel="me" href="https://plus.google.com/+RobertCarrollz">Google</a></li>
+		    <li class="zeta"><a href="{{ site.baseurl }}atom.xml">RSS</a></li>
 		  </ul>
 	</div>
  </footer>
