New post about d3 and maps.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
       <a href="/" rel="v:url" property="v:title">@robertocarroll</a>
     </span> →
     <span typeof="v:Breadcrumb">
-      <a href="{{ site.baseurl }}{{ page.categories}}" rel="v:url" property="v:title">{{ page.categories}}</a>
+      <a href="{{ site.baseurl }}{{ page.categories | downcase }}" rel="v:url" property="v:title">{{ page.categories}}</a>
     </span>
     {% endif %}
     <span id="menu-button" class="button-open"></span>
