--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,11 +38,12 @@
     function loadCSS(e,t,n){"use strict";function r(){for(var t,i=0;i<d.length;i++)d[i].href&&d[i].href.indexOf(e)>-1&&(t=!0);t?o.media=n||"all":setTimeout(r)}var o=window.document.createElement("link"),i=t||window.document.getElementsByTagName("script")[0],d=window.document.styleSheets;return o.rel="stylesheet",o.href=e,o.media="only x",i.parentNode.insertBefore(o,i),r(),o}
     // load a file
     loadCSS( "//cloud.typography.com/6272432/767186/css/fonts.css");
+    loadCSS( "/css/styles.css");
   </script>
 
   <noscript><link href="//cloud.typography.com/6272432/767186/css/fonts.css" rel="stylesheet"></noscript>
 
-  <link href="/css/styles.css" rel="stylesheet">
+  <noscript><link href="/css/styles.css" rel="stylesheet"></noscript>
 
   <!-- Icons -->
   <link rel="shortcut icon" href="{{ site.baseurl }}images/favicon.ico">
