Added footer to critical CSS.

--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -4,4 +4,5 @@
 @import "../_scss/gridset.scss";
 @import "../_scss/typography.scss";
 @import "../_scss/misc.scss";
+@import "../_scss/footer.scss";
 @import "../_scss/masthead.scss";
