--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
     <meta name="description" content="{{ site.tagline }}" />
   {% endif %}
   <meta name="author" content="{{ site.title }}" />
+  <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
   <meta property="twitter:account_id" content="{{ site.author.twitter }}">
   <meta content="vnU0A1i9IQWwXG4r7V8wfUj69n_IZDQyqS3TQYh7P7Y" name="google-site-verification">
 
