--- a/_scss/typography.scss
+++ b/_scss/typography.scss
@@ -189,3 +189,7 @@ strong {     font-weight: bold; }
 .ttc {       text-transform: capitalize; }
 .ttu {       text-transform: uppercase; }
 
+.tl  { text-align: left; }
+.tr  { text-align: right; }
+.tc  { text-align: center; }
+
