--- a/_includes/article-next-previous.html
+++ b/_includes/article-next-previous.html
@@ -1,11 +1,11 @@
 <aside class="next-previous-post">
-{% for post in site.categories.journal %}
+{% for post in site.journal reversed %}
   {% if post.url == page.url %}
       {% assign post_index0 = forloop.index0 %}
       {% assign post_index1 = forloop.index %}
   {% endif %}
 {% endfor %}
-  {% for post in site.categories.journal %}
+  {% for post in site.journal reversed %}
       {% if post_index0 == forloop.index %}
           {% assign next_post = post.url %}
           {% assign next_post_title = post.title %}
