--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -27,13 +27,13 @@ layout: wide
 
 <!-- Within category next/previous without a plugin -->
 <aside class="next-previous">
-{% for post in site.categories.work %}
+{% for post in site.work reversed %}
   {% if post.url == page.url %}
       {% assign post_index0 = forloop.index0 %}
       {% assign post_index1 = forloop.index %}
   {% endif %}
 {% endfor %}
-  {% for post in site.categories.work %}
+  {% for post in site.work reversed %}
       {% if post_index0 == forloop.index %}
           {% assign next_post = post.url %}
       {% endif %}
