Added Tachyons over the top of other CSS

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,6 +2,9 @@
 # Use a comment to ensure Jekyll reads the file to be transformed into CSS later
 # only main files contain this front matter, not partials.
 ---
+@import "_variables.scss";
+@import "_tachyons/_tachyons.scss";
+@import "_tachyons-extend.scss";
 @import "vars";
 @import "reset";
 @import "_mixins";
