--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,54 +1,17 @@
 <header>
-  <div class="breadcrumb">
-    {% if page.title == "Home" %}
-    <span typeof="v:Breadcrumb" >
-      <a href="/" rel="v:url" property="v:title">Home</a>
-    </span>
-    {% else %}
-    <span typeof="v:Breadcrumb">
-      <a href="/" rel="v:url" property="v:title">@robertocarroll</a>
-    </span> →
-    <span typeof="v:Breadcrumb">
-      <a href="{{ site.baseurl }}{{ page.categories[0] | downcase }}" rel="v:url" property="v:title">
-        {{ page.categories[0]}}</a>
-    </span>
-    {% endif %}
-    <span id="menu-button" class="button-open"></span>
-  </div>
-
-  <nav id="the-nav">
-    <ul class="nav">
-      <li><a title="Home" href="/">Home</a></li>
-      <li><a title="Work" href="/work">Work</a></li>
-      <li><a title="About" href="/about">About</a></li>
-      <li><a title="Writing" href="/writing">Writing</a></li>
-      <li><a title="Journal" href="/journal">Journal</a></li>
-    </ul>
+  <nav class="db dt-l w-100 border-box pa3 ph5-l bb b--black-10">
+  <a class="db dtc-l v-mid mid-gray dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
+    Robert Carroll
+  </a>
+    <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
+      <a class="dim dark-gray f6 f5-l dib mr3 mr4-l {% if page.url == '/' %} current b--primary {% endif %}" href="/">Home</a>
+      {% for link in site.navigation %}
+       {% assign current = nil %}
+        {% if page.url contains link.url %}
+            {% assign current = 'current b--primary' %}
+        {% endif %}
+        <a class="dim dark-gray f6 f5-l dib mr3 mr4-l {{ current }}" href="{{ link.url }}">{{ link.title }}</a>
+      {% endfor %}
+    </div>
   </nav>
-
-  <script>
-    // hasClass
-    function hasClass(elem, className) {
-      return new RegExp(' ' + className + ' ').test(' ' + elem.className + ' ');
-    }
-    // toggleClass
-    function toggleClass(elem, className) {
-      var newClass = ' ' + elem.className.replace( /[\t\r\n]/g, " " ) + ' ';
-        if (hasClass(elem, className)) {
-            while (newClass.indexOf(" " + className + " ") >= 0 ) {
-                newClass = newClass.replace( " " + className + " " , " " );
-            }
-            elem.className = newClass.replace(/^\s+|\s+$/g, '');
-        } else {
-            elem.className += ' ' + className;
-        }
-    }
-    document.getElementById('menu-button').onclick = function() {
-        var thenav = document.getElementById('the-nav');
-        toggleClass(thenav, 'open');
-        toggleClass(this, 'button-open');
-        toggleClass(this, 'button-close');
-    }
-
-  </script>
 </header>
