--- a/_scss/base.scss
+++ b/_scss/base.scss
@@ -32,7 +32,7 @@ html {
 }
 
 // ratio: 1.1609981
-body {
+/* body {
   font-family: $inuit-body-font;
   color: $textPrimaryColor;
   background-color: $backgroundColor;
@@ -40,3 +40,4 @@ body {
       -ms-text-size-adjust: 100%;
 }
 
+*/
