--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="db dt-l w-100 border-box pa3 ph5-l bb b--black-10">
+  <nav class="db dt-l w-100 border-box pa3 ph5-l bb b--black-10 sans-serif">
   <a class="db dtc-l v-mid mid-gray dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
     Robert Carroll
   </a>
