--- a/_scss/typography.scss
+++ b/_scss/typography.scss
@@ -11,11 +11,12 @@
  * stranded heading hierarchy: csswizardry.com/2012/02/pragmatic-practical-font-sizing-in-css
  */
 
-h1, h2, h3, h4, h5, h6 {
+/* h1, h2, h3, h4, h5, h6 {
   font-family: $inuit-heading-font;
   font-weight: normal;
   color: $textPrimaryColor;
 }
+*/
 
 h1,
 .alpha {
