Remove typography and change nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="db dt-l w-100 border-box pa3 ph5-l bb b--black-10 sans-serif">
-  <a class="db dtc-l v-mid mid-gray dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
+  <a class="db dtc-l v-mid mid-gray dim w-100 w-25-l tc tl-l mb3 mb0-l" href="/" title="Home">
     Robert Carroll
   </a>
     <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
@@ -10,7 +10,7 @@
         {% if page.url contains link.url %}
             {% assign current = 'current b--primary' %}
         {% endif %}
-        <a class="dim dark-gray f6 f5-l dib mr3 mr4-l {{ current }}" href="{{ link.url }}">{{ link.title }}</a>
+        <a class="dim dark-gray f6 f5-l dib mr3 mr4-l mb3 {{ current }}" href="{{ link.url }}">{{ link.title }}</a>
       {% endfor %}
     </div>
   </nav>
