Move tachyons after other stylesheets

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
   {% if page.top_image %}
 
 		<figure class="post_image">
-		<img src="{{ site.baseurl }}images/{{ page.top_image }}" alt="{{ page.top_image_caption }}">
+		<img src="/images/{{ page.top_image }}" alt="{{ page.top_image_caption }}">
 			<figcaption>{{ page.top_image_caption }}</figcaption>
 		</figure>
 
