Type size tweaks

--- a/_scss/_tachyons-extend.scss
+++ b/_scss/_tachyons-extend.scss
@@ -9,6 +9,9 @@ h1, h2, h3, h4, h5, h6 {
 p {
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
+    @extend .f4;
+    @extend .lh-copy;
+    @extend .serif;
 }
 
 //_type-scale
