--- a/_scss/_tachyons-extend.scss
+++ b/_scss/_tachyons-extend.scss
@@ -1,17 +1,15 @@
 //font-family
 
+body {
+  font-family: georgia,
+               times,
+               serif;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   color: $primary-color;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
-}
-
-p {
-    -webkit-margin-before: 0;
-    -webkit-margin-after: 0;
-    @extend .f4;
-    @extend .lh-copy;
-    @extend .serif;
 }
 
 //_type-scale
@@ -75,6 +73,27 @@ h6,.f6 { font-size: .875rem; }
   .f5-l { font-size: 1rem; }
   .f6-l { font-size: .875rem; }
   .f7-l { font-size: .75rem; }
+}
+
+p {
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    @extend .lh-copy;
+    @extend .serif;
+    @extend .pb3;
+}
+
+.post h2 {
+  @extend .f3;
+  @extend .pb1;
+}
+
+.work-main h2 {
+  @extend .f3;
+  @extend .pb1;
+  @extend .ttu;
+  @extend .tracked;
+  @extend .cb;
 }
 
 
