--- a/_layouts/quote.html
+++ b/_layouts/quote.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="page lh-copy">
-  <h1 class="page-title">{{ page.title }}</h1>
+  <h1 class="post-title f4 lh-title">{{ page.date | date_to_long_string }}</h1>
   {{ content }}
 </article>
 
