--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,7 @@
   <noscript><link href="/css/styles.css" rel="stylesheet"></noscript>
 
   <!-- Icons -->
-  <link rel="shortcut icon" href="{{ site.baseurl }}images/favicon.ico">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}atom.xml">
