--- a/_scss/_tachyons/_font-family.scss
+++ b/_scss/_tachyons/_font-family.scss
@@ -13,7 +13,7 @@
 */
 
 
-.sans-serif {
+body,.sans-serif {
   font-family: -apple-system, BlinkMacSystemFont,
                'avenir next', avenir,
                'helvetica neue', helvetica,
