--- a/_scss/_tachyons/_styles.scss
+++ b/_scss/_tachyons/_styles.scss
@@ -44,6 +44,44 @@ ul {
   @extend .cb;
 }
 
+.main {
+  padding-top: $inuit-base-spacing-unit--large;
+  padding-bottom: $inuit-base-spacing-unit--large;
+
+  @include breakpoint(small) {
+    @include gs-span(m, 2);
+  }
+
+  @include breakpoint(medium) {
+    @include gs-span(t, 2, 6);
+  }
+
+  @include breakpoint(large) {
+    @include gs-span(d, 3, 7);
+  }
+
+}
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: $inuit-base-spacing-unit--large;
+    margin-bottom: $inuit-base-spacing-unit;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    height: auto;
+    clear: both;
+  }
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 
 //_border-colors
 .b--primary { border-color: $primary-color }
