Starting to comment out old stuff

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,7 +7,7 @@
 @import "_mixins";
 @import "gridset";
 @import "css3-mixins";
-@import "base";
+//@import "base";
 @import "buttons";
 @import "code";
 @import "footer";
