--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,7 +10,7 @@
 //@import "base";
 @import "buttons";
 @import "code";
-@import "footer";
+//@import "footer";
 @import "home";
 @import "journal";
 @import "images";
