--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<header>
+<header class="bt b--dark-gray bw2">
   <nav class="db dt-l w-100 border-box pa3 ph5-l bb b--black-10 sans-serif">
   <a class="db dtc-l v-mid mid-gray dim w-100 w-25-l tc tl-l mb3 mb0-l" href="/" title="Home">
     Robert Carroll
