Changed paragraph type size

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -11,10 +11,10 @@
 @import "buttons";
 @import "code";
 //@import "footer";
-@import "home";
+//@import "home";
 @import "journal";
 @import "images";
-@import "misc";
+//@import "misc";
 @import "links";
 @import "message";
 @import "posts";
