--- a/_scss/_tachyons/_styles.scss
+++ b/_scss/_tachyons/_styles.scss
@@ -1,10 +1,3 @@
-
-// Converted Variables
-
-
-// Custom Media Query Variables
-
-
 /*
 
   STYLES
@@ -19,15 +12,20 @@ h1, h2, h3, h4, h5, h6 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
 }
 
-p {
+p, ul {
     @extend .f4;
     @extend .lh-copy;
     @extend .serif;
     @extend .pb3;
 }
 
-ul {
-  @extend .serif;
+.work-content p {
+  @extend .pb3;
+}
+
+p a {
+  @extend .primary;
+  @extend .dim;
 }
 
 .post h2 {
@@ -44,8 +42,6 @@ ul {
 }
 
 .main {
-  padding-top: $inuit-base-spacing-unit--large;
-  padding-bottom: $inuit-base-spacing-unit--large;
 
   @include breakpoint(small) {
     @include gs-span(m, 2);
@@ -118,14 +114,7 @@ ul {
   column-gap: 2em;
 }
 
-.work-content p {
-  @extend .pb3;
-}
 
-p a {
-  @extend .primary;
-  @extend .dim;
-}
 
 ul.dash > li:before {
   content: '\2014'; /* en dash here */
