Home page to HTML

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -18,7 +18,7 @@
 @import "links";
 @import "message";
 @import "posts";
-@import "typography";
+//@import "typography";
 @import "tables";
 @import "work";
 @import "_variables.scss";
