--- a/css/styles.scss
+++ b/css/styles.scss
@@ -15,7 +15,7 @@
 @import "journal";
 @import "images";
 //@import "misc";
-@import "links";
+//@import "links";
 @import "message";
 @import "posts";
 //@import "typography";
