--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,16 +1,16 @@
 <header class="bt b--dark-gray bw2">
   <nav class="db dt-l w-100 border-box pa3 pt4 ph5-l bb b--black-10 sans-serif">
-  <a class="db dtc-l v-mid mid-gray dim w-100 w-25-l tc tl-l mb3 mb0-l" href="/" title="Home">
+  <a class="db dtc-l v-mid mid-gray dim w-100 w-25-l tc tl-l mb3 mb0-l no-underline" href="/" title="Home">
     Robert Carroll
   </a>
     <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
-      <a class="dim dark-gray f6 f5-l dib mr3 mr4-l {% if page.url == '/' %} current b--primary {% endif %} no-underline" href="/">Home</a>
+      <a class="dim dark-gray f6 f5-l dib mr3 mr4-l no-underline {% if page.url == '/' %} current b--primary {% endif %} no-underline" href="/">Home</a>
       {% for link in site.navigation %}
        {% assign current = nil %}
         {% if page.url contains link.url %}
             {% assign current = 'current b--primary' %}
         {% endif %}
-        <a class="dim dark-gray f6 f5-l dib mr3 mr4-l mb3 {{ current }}" href="{{ link.url }}">{{ link.title }}</a>
+        <a class="dim dark-gray f6 f5-l dib mr3 mr4-l mb3 no-underline {{ current }}" href="{{ link.url }}">{{ link.title }}</a>
       {% endfor %}
     </div>
   </nav>
