--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,13 +13,13 @@
 //@import "footer";
 //@import "home";
 @import "journal";
-@import "images";
+//@import "images";
 //@import "misc";
 //@import "links";
 @import "message";
 @import "posts";
 //@import "typography";
-@import "tables";
+//@import "tables";
 @import "work";
 @import "_variables.scss";
 @import "_tachyons/_tachyons.scss";
