Give the nav a bit more space

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <header class="bt b--dark-gray bw2">
-  <nav class="db dt-l w-100 border-box pa3 pt4 ph5-l bb b--black-10 sans-serif">
+  <nav class="db dt-l w-100 border-box pa3 pv4 ph5-l bb b--black-10 sans-serif">
   <a class="db dtc-l v-mid mid-gray dim w-100 w-25-l tl-l mb3 mb0-l no-underline" href="/" title="Home">
     Robert Carroll
   </a>
