--- a/css/styles.scss
+++ b/css/styles.scss
@@ -12,12 +12,12 @@
 @import "code";
 //@import "footer";
 //@import "home";
-@import "journal";
+//@import "journal";
 //@import "images";
 //@import "misc";
 //@import "links";
-@import "message";
-@import "posts";
+//@import "message";
+//@import "posts";
 //@import "typography";
 //@import "tables";
 @import "work";
