--- a/_scss/_tachyons/_styles.scss
+++ b/_scss/_tachyons/_styles.scss
@@ -16,7 +16,8 @@ p, ul {
     @extend .f4;
     @extend .lh-copy;
     @extend .serif;
-    @extend .pb3;
+    @extend .pb4;
+    @extend .measure;
 }
 
 .work-content p {
@@ -31,7 +32,7 @@ p a {
 
 .post h2 {
   @extend .f3;
-  @extend .pb1;
+  @extend .pb2;
 }
 
 .work-main h2 {
@@ -76,6 +77,45 @@ p a {
   height: 100%;
 }
 
+ul.dash > li:before {
+  content: '\2014'; /* en dash here */
+  position: absolute;
+  margin-left: -1.1em;
+}
+
+.current {
+  text-decoration: none;
+  position: relative;
+}
+
+.current:after  {
+  content: "";
+  border-style: solid;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -$spacing-small;
+  border-width: 1px;
+}
+
+figcaption:before {
+  content: '↑';
+  @extend .mr2;
+}
+
+blockquote {
+  @extend .pl4;
+  @extend .mb5;
+  @extend .i;
+  @extend .black-80;
+  @extend .bl;
+  @extend .bw2;
+  @extend .b--silver;
+}
+
+blockquote p:last-child {
+  padding-bottom: 0;
+}
 
 //_border-colors
 .b--primary { border-color: $primary-color }
@@ -114,28 +154,4 @@ p a {
 }
 
 
-ul.dash > li:before {
-  content: '\2014'; /* en dash here */
-  position: absolute;
-  margin-left: -1.1em;
-}
 
-.current {
-  text-decoration: none;
-  position: relative;
-}
-
-.current:after  {
-  content: "";
-  border-style: solid;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: -$spacing-small;
-  border-width: 1px;
-}
-
-figcaption:before {
-  content: '↑';
-  @extend .mr2;
-}
