--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -3,7 +3,7 @@ $root-line-height: 1.5;
 $body-color: #212121;
 $body-bg: #fff;
 $primary-color: #607D8B;
-$secondary-color: #f2dc00;
+$secondary-color: #FFFF00;
 $secondary-alt-color: #678290;
 $grey-color: #eeeff0;
 
