--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,10 +6,10 @@
 @import "reset";
 @import "_mixins";
 @import "gridset";
-@import "css3-mixins";
+//@import "css3-mixins";
 //@import "base";
 @import "buttons";
-@import "code";
+//@import "code";
 //@import "footer";
 //@import "home";
 //@import "journal";
