--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,13 +4,13 @@ layout: default
 
 <article class="pt4 post">
   <h1 class="f1 mb3">{{ page.title }}</h1>
-  <time datetime="{{ page.date | date_to_xmlschema }}" class="f6 light-silver tracked ttu pb4 db">{{ page.date | date_to_string }}</time>
+  <time datetime="{{ page.date | date_to_xmlschema }}" class="f6 light-silver tracked ttu pb4 db">{{ page.date | date: "%-d %B %Y" }}</time>
 
   {% if page.top_image %}
 
-		<figure class="post_image">
+		<figure class="pb4">
 		<img src="/images/{{ page.top_image }}" alt="{{ page.top_image_caption }}">
-			<figcaption>{{ page.top_image_caption }}</figcaption>
+			<figcaption class="f6 silver i pt1">{{ page.top_image_caption }}</figcaption>
 		</figure>
 
 	{% endif %}
