--- a/_scss/_tachyons/_lists.scss
+++ b/_scss/_tachyons/_lists.scss
@@ -13,3 +13,5 @@
 */
 
 .list {         list-style-type: none; }
+.post ol {      list-style-type: decimal; }
+.post ul {      list-style-type: disc; }
