Fixed up writing

--- a/_includes/article-next-previous.html
+++ b/_includes/article-next-previous.html
@@ -1,4 +1,4 @@
-<aside class="pt4 pb6">
+<aside class="pt4 pb6 cb">
 {% capture the_collection %}{{page.collection}}{% endcapture %}
   {% if page.collection %}
     {% assign  document = site[the_collection]  %}
