--- a/_layouts/writing.html
+++ b/_layouts/writing.html
@@ -2,41 +2,15 @@
 layout: wide
 ---
 
-<article class="work-main">
-  <h1 class="work-main-title">{{ page.title }}</h1>
-
-  <hr class="clear">
-
-  <p class="work-main-excerpt">{{ page.excerpt }}</p>
-
-  <p class="centre">{{ page.date | date: '%Y' }}</p>
+<article class="work-main pt4">
+  <h1 class="f1 f-subheadline-l mb3 mb5-l tc">{{ page.title }}</h1>
+  <hr class="cb">
 
   {{ content }}
 
+  <p class="f6 light-silver tracked ttu">{{ page.date | date: '%Y' }}</p>
 </article>
 
-<!-- Within category next/previous without a plugin -->
-<aside class="next-previous">
-{% for post in site.categories.writing %}
-  {% if post.url == page.url %}
-      {% assign post_index0 = forloop.index0 %}
-      {% assign post_index1 = forloop.index %}
-  {% endif %}
-{% endfor %}
-  {% for post in site.categories.writing %}
-      {% if post_index0 == forloop.index %}
-          {% assign next_post = post.url %}
-      {% endif %}
-      {% if post_index1 == forloop.index0 %}
-          {% assign prev_post = post.url %}
-      {% endif %}
-  {% endfor %}
-   {% if prev_post %}
-      <a href="{{ prev_post }}" class="previous-link">↫ previous</a>
-  {% endif %}
-  {% if next_post %}
-      <a href="{{ next_post }}" class="next-link">next ↬</a>
-  {% endif %}
-</aside>
-
-
+<div class="work-main">
+  {% include article-next-previous.html %}
+</div>
