--- a/_scss/_tachyons/_lists.scss
+++ b/_scss/_tachyons/_lists.scss
@@ -13,5 +13,5 @@
 */
 
 .list {         list-style-type: none; }
-.post ol {      list-style-type: decimal; }
-.post ul {      list-style-type: disc; }
+.post, .work-main ol {      list-style-type: decimal; }
+.post, .work-main ul {      list-style-type: disc; }
