--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,7 +7,7 @@
 @import "_mixins";
 @import "gridset";
 @import "buttons";
-@import "work";
+//@import "work";
 @import "_variables.scss";
 @import "_tachyons/_tachyons.scss";
 
