Tweaks to content styles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="fl w-100 w-50-ns tc tr-l f6 f4-l">
-        <a class=" link white bg-dark-gray dib mt3 mt1-l" href="https://www.wearethoughtfox.com"> I run We Are Thought Fox</a>
+        <p class="sans-serif link white bg-dark-gray dib mt3 mt1-l o-60"> I run {{site.description}}</p>
     </div>
  </footer>
 
