--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,9 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+  <!-- Inline critical css -->
+  <style type="text/css">{% include critical.css %}</style>
+
   <title>
     {% if page.title == "Home" %}
       {{ site.title }} &middot;
