--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,8 +16,8 @@
          </a>
     </div>
 
-    <div class="fl w-100 w-50-ns tc tr-l f6 f4-l">
-        <p class="sans-serif link white bg-dark-gray dib mt3 mt1-l o-60"> I run {{site.description}}</p>
+    <div class="fl w-100 w-50-ns tc tr-l">
+        <p class="sans-serif link white bg-dark-gray dib mt3 mt1-l o-60 f6 f4-l"> I run {{site.description}}</p>
     </div>
  </footer>
 
