--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,4 +44,5 @@
   <!-- RSS -->
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}atom.xml">
 
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
