--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,15 +3,6 @@
   <meta charset="utf-8">
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  {% if page.excerpt %}
-    <meta name="description" content="{{ page.excerpt | strip_html | truncatewords: 20 }}" />
-  {% else %}
-    <meta name="description" content="{{ site.tagline }}" />
-  {% endif %}
-  <meta name="author" content="{{ site.title }}" />
-  <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
-  <meta property="twitter:account_id" content="{{ site.author.twitter }}">
-  <meta content="vnU0A1i9IQWwXG4r7V8wfUj69n_IZDQyqS3TQYh7P7Y" name="google-site-verification">
 
   <!-- Enable responsiveness on mobile devices-->
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -19,17 +10,7 @@
   <!-- Inline critical css -->
   <style type="text/css">{% include critical.css %}</style>
 
-  <title>
-    {% if page.title == "Home" %}
-      {{ site.title }} &middot;
-      {{ site.tagline }}
-    {% else %}
-      {{ page.title }} &middot;
-      {{ site.title }}
-    {% endif %}
-  </title>
-
-  <!-- Styles and Fonts -->
+  <!-- Styles -->
   <script>
     function loadCSS(e,t,n){"use strict";function r(){for(var t,i=0;i<d.length;i++)d[i].href&&d[i].href.indexOf(e)>-1&&(t=!0);t?o.media=n||"all":setTimeout(r)}var o=window.document.createElement("link"),i=t||window.document.getElementsByTagName("script")[0],d=window.document.styleSheets;return o.rel="stylesheet",o.href=e,o.media="only x",i.parentNode.insertBefore(o,i),r(),o}
     // load a file
@@ -43,5 +24,7 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}atom.xml">
+
+   {% seo %}
 
 </head>
