Code CSS first draft

--- a/_scss/_tachyons/_styles.scss
+++ b/_scss/_tachyons/_styles.scss
@@ -219,5 +219,13 @@ cite {
   column-gap: 2em;
 }
 
+.highlighter-rouge {
+  @extend .pa4;
+  @extend .bg-black;
+  @extend .mb4;
+  @extend .white;
+  @extend .lh-copy;
+}
+
 
 
