--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,9 @@
 <html lang="en">
   {% include head.html %}
 <body>
+  <a href="#content" class="skip">Skip to content</a>
   {% include nav.html %}
-  <div class="main" role="main">
+  <div id="content" class="main" role="main">
     {{ content }}
   </div>
   {% include footer.html %}
