--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,22 @@
     {{ content }}
   </div>
   {% include footer.html %}
+
+    <!-- Start of Netlify admin code -->
+  <script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", function (user) {
+      if (!user) {
+        window.netlifyIdentity.on("login", function () {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
+
+ <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
   <script async src="/javascripts/gridset-overlay.js"> </script>
   </body>
 </html>
