--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
   <!-- Inline critical css -->
   <style type="text/css">{% include critical.css %}</style>
 
+  <meta name="yandex-verification" content="82cac82727d7a384" />
+
   <!-- Styles -->
   <script>
     function loadCSS(e,t,n){"use strict";function r(){for(var t,i=0;i<d.length;i++)d[i].href&&d[i].href.indexOf(e)>-1&&(t=!0);t?o.media=n||"all":setTimeout(r)}var o=window.document.createElement("link"),i=t||window.document.getElementsByTagName("script")[0],d=window.document.styleSheets;return o.rel="stylesheet",o.href=e,o.media="only x",i.parentNode.insertBefore(o,i),r(),o}
