--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,13 @@
   }
 </script>
 
+ <!-- Service worker - https://adactio.com/journal/13540 -->
+  <script>
+
+  if (navigator.serviceWorker && !navigator.serviceWorker.controller) { navigator.serviceWorker.register('/serviceworker.js'); }
+
+  </script>
+
  <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
   <script async src="/javascripts/gridset-overlay.js"> </script>
